[gd_scene load_steps=5 format=1]

[ext_resource path="res://UI/Desktop/InfoBar.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/Desktop/info_underlay.png" type="Texture" id=2]
[ext_resource path="res://Assets/processed_fonts/desktop_info_header.fnt" type="BitmapFont" id=3]
[ext_resource path="res://Assets/processed_fonts/desktop_info.fnt" type="BitmapFont" id=4]

[node name="InfoBar" type="Node2D"]

script/script = ExtResource( 1 )

[node name="WaveBackdrop" type="Sprite" parent="."]

visibility/behind_parent = true
transform/pos = Vector2( 103.904, 79.1465 )
texture = ExtResource( 2 )

[node name="WaveHeader" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 13.0
margin/top = 70.0
margin/right = 160.0
margin/bottom = 94.0
custom_fonts/font = ExtResource( 3 )
text = "NEXT WAVE IN"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="WaveCountdown" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 158.0
margin/top = 64.0
margin/right = 198.0
margin/bottom = 99.0
custom_fonts/font = ExtResource( 4 )
text = "3"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TurnBackdrop" type="Sprite" parent="."]

visibility/behind_parent = true
transform/pos = Vector2( 105.108, 22.9094 )
texture = ExtResource( 2 )

[node name="TurnsHeader" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 37.0
margin/top = 14.0
margin/right = 94.0
margin/bottom = 38.0
custom_fonts/font = ExtResource( 3 )
text = "TURN"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TurnCountdown" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 100.0
margin/top = 7.0
margin/right = 160.0
margin/bottom = 42.0
custom_fonts/font = ExtResource( 4 )
text = "3/5"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


